Added basic functionality

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <!-- INDEX  -->
     <div class="info">      
         <h1 class='text1'>KM Counter</h1>
-        <h1 class="text2">You've got <p class="km-number" style="display: inline">X</p> KM left.</h1>
-        <button type="button" class="btn btn-primary">Add KMs</button>
+        <h1 class="text2">You've got <p class="km-number" style="display: inline">0</p> KM left.</h1>
+        <!-- <button type="button" class="btn btn-primary">Add KMs</button> -->
     </div>
     
     <!-- ADD KM  -->
@@ -24,8 +24,8 @@
         <h1 class='text3'>Introduce litres:</h1>
         <input type="number" class='km-input' step='0.01'>
         <div class="buttons">
-            <button type="button" class="btn btn-outline-secondary">Back</button>
-            <button type="button" class="btn btn-primary">Confirm</button>
+            <!-- <button type="button" class="btn btn-outline-secondary">Back</button> -->
+            <button id='confirm-btn' type="button" class="btn btn-primary">Confirm</button>
         </div>
         
     </div>
